# SAE_ECS

./: CMakeLists.txt
include/: SAE_ECS.h
source/: EntityFactory.h  SAE_ECS.cpp
tests/: test.cpp
